Добавлен анализ актуальности

--- a/report/analysis.tex
+++ b/report/analysis.tex
@@ -1,26 +1,28 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Анализ подходов}
+\chapter{Анализ предметной области}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Подход 1}
+\section{Анализ актуальности}
+В настоящее время к скорости распространения информации предъевляются высокие требования. Это обусловлено тем, что возникает необходимость быстро реагировать на какие-либо изменения и корректировать план своей деятельности. Когда закрывается одна из станций метро, все пассажиры получают об этом своевременное оповещение и выбирут более удобный маршрут. В структуре ВУЗа аналогичным примером является изменеие расписания занятий. Задача обзвона и личного уведомления каждого студента занимает дляительное время и требует много человеческих ресурсов. Специальный сервис с расписанием, доступ к которому есть у каждого студента, решает эту проблему в считанные минуты.
 
-\subsection{Инструмент 1}
+Однако, чаще всего необходимо получить доступ не к общедоступной информации, а к персональным данным. Это могут быть сведения о заказе в интернет-магазине, о задолженности в библиотеке, об оплате проживания или штрафов. У этой категории задач также есть два пути решения. Первый - консервативный. вы можете лично позвонить или придти по нужному адресу и узнать все, что вам нужно. Но, во-первых, это затратно по времени, силам и, возможно, средствам. Во-вторых, несмотря на все вложения данный алгоритм действий не гарантирует получение результата в любое время. Так в магазине может быть выходной, а у диспетчера телефонной службы слишком много звонков. Второй путь - современный. Для этого банки, магазины, библиотеки и другие организации создают электронные личные кабинеты. Такая система не только решает проблему быстрого доступа к персональным данным, но и позволяет пользователю удаленно совершать определенные действия, такие как заказ квитанций в банке или книг в библиотеке.
 
-Ссылка на статью \cite{russian}
+С аналогичными проблемами сталкивается студент высшего учебного заведения. Ему также приходится работать как с общедоступной информацией (расписание занятий, новости о различных событиях, презентации  и матириалы курсов), так и с персональными данными (сведения об успеваемости, оплате обучения и проживания в общежитии, заявках на повышенную стипендию и участие в олимпиадах). Таким образом, создание электронной системы, которая значительно упрощает выполнение описанных выше действий - это актуальная задача для каждого высшего учебного заведения в России и в мире.
 
-Ссылка на сайт \cite{ANTLR}
+Стоит учитывать, что при создании такой электронной системы возникает еще одна актуальная проблема. Это проблема доступности сервиса на различный устройствах. Данная проблема особенно важна в контексте создания личного кабинета студента. Это обусловлено тем, что молодое поколение при необходимости получить ту или иную информацию чаще обращается к мобильному устройству, а не к компьютеру. Поэтому необходимо учитывать данный аспект при разработке системы. Например, создание мобильной версии сайта или мобильного приложения решает данную проблему.
 
-\nomenclature{АСД}{Абстрактное синтаксическое дерево, AST}
+\section{Существующие решения}
 
-\section{Подход 2}
+	\subsection{Мобильное приложение <<Расписание ВУЗов>>}
+	
+	\subsection{Образовательная сеть <<Дневник.ру>>}
+	
+	\subsection{Личный кабинет обучающегося СПбГУ}
+	
+	\subsection{Личный кабинет студента СПбГУТ}
+	
+	\subsection{Личный кабинет студента СПбПУ}
 
-Ссылка на книгу \cite{java-book}
+\section{Сравнительный анализ}
 
-Ссылка на рисунок \ref{fig:idea}
-
-\begin{figure}[htbp]
-	\centering
-	\includegraphics[width=0.8\textwidth]{fig/code_analysis_bugs.png}
-	\caption{Предупреждение от статического анализатора в IntelliJ IDEA и всплывающее меню Quick Fix}%
-	\label{fig:idea}
-\end{figure}
+\section{Постановка задачи}
