--- a/report/title.tex
+++ b/report/title.tex
@@ -11,7 +11,7 @@
 \title{ВЫПУСКНАЯ РАБОТА БАКАЛАВРА}
 
 % Тема
-\topic{Автоматическое добавление ошибок в программный код}
+\topic{Разработка электронного личного кабинета студента под операционную систему Android}
 
 % Направление
 \coursenum{230100}
@@ -19,12 +19,12 @@
 
 
 % Автор
-\author{А.О.~Алексюк}
+\author{ М.Н.~Козлов}
 \group{43501/3}
 
 % Научный руководитель
-\sa{В.М.~Ицыксон}
-\sastatus{к.~т.~н.,~доц.}
+\sa{А.В.~Лексашов}
+\sastatus{ст.~преп.}
 
 \logo{fig/spbpu.jpg}
 
